# Butterfly

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  makefile
example/: AdvancedUsage.cpp  BasicUsage.cpp  ColoredConsoleWing.cpp  SpeedTest.cpp  ThreadSafeUsage.cpp  example.cpp
examples/: AdvancedUsage.cpp  BasicUsage.cpp  CMakeLists.txt  ColoredConsoleUsage.cpp  SpeedTest.cpp  ThreadSafeUsage.cpp  advanced_usage.cpp  basic_usage.cpp  colored_console_usage.cpp  speedtest.cpp  thread_safe_usage.cpp
include/Butterfly/: Butterfly.hpp  Common.hpp  Logger.hpp  Net.hpp  Registry.hpp  SafeLogger.hpp  Wing.hpp
include/Butterfly/Details/: Exceptions.hpp  Formatter.hpp  LogPackage.hpp  Package.hpp  PackageFormatter.hpp
include/Butterfly/Details/PackageFormatters/: ColoredPackageFormatter.hpp
include/Butterfly/Loggers/: Logger.hpp  Wing.hpp
include/Butterfly/Wings/: ColoredConsoleWing.hpp  ConsoleWing.hpp  FileWing.hpp  Wing.hpp
include/butterfly/: butterfly.hpp  common.hpp  logger.hpp  net.hpp  registry.hpp  safe_logger.hpp  wing.hpp
include/butterfly/details/: package.hpp  package_formatter.hpp
include/butterfly/details/package_formatters/: colored_package_formatter.hpp
include/butterfly/wings/: colored_console_wing.hpp  console_wing.hpp  file_wing.hpp
src/: Butterfly.cpp  ColoredPackageFormatter.cpp  Common.cpp  ConsoleWing.cpp  Exceptions.cpp  FileWing.cpp  Formatter.cpp  LogPackage.cpp  Logger.cpp  Net.cpp  Package.cpp  PackageFormatter.cpp  Registry.cpp  SafeLogger.cpp  Wing.cpp  butterfly.cpp  common.cpp  logger.cpp  net.cpp  registry.cpp  safe_logger.cpp  wing.cpp
src/Details/: Package.cpp  PackageFormatter.cpp
src/Details/PackageFormatters/: ColoredPackageFormatter.cpp
src/Wings/: ColoredConsoleWing.cpp  ConsoleWing.cpp  FileWing.cpp
src/details/: package_formatter.cpp
src/details/package_formatters/: colored_package_formatter.cpp
src/wings/: colored_console_wing.cpp  console_wing.cpp  file_wing.cpp
